docs/api/qiskit/0.24/qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.mdx
---
title: VibronicStructureBase
description: API reference for qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase
---

<span id="qiskit-chemistry-algorithms-pes-samplers-vibronicstructurebase" />

# qiskit.chemistry.algorithms.pes\_samplers.VibronicStructureBase

<Class id="qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/chemistry/algorithms/pes_samplers/potentials/potential_base.py" signature="VibronicStructureBase(molecule)">
  Class to hold a molecular vibronic structure providing access to vibrational modes and energy levels.

  ### \_\_init\_\_

  <Function id="qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.__init__" name="__init__" signature="__init__(molecule)">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                                                                                                           |                                                                                                                          |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.__init__ "qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.__init__")(molecule)                                                | Initialize self.                                                                                                         |
  | [`get_maximum_trusted_level`](#qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.get_maximum_trusted_level "qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.get_maximum_trusted_level")(\[n]) | Returns the maximum energy level for which the particular implementation still provides a good approximation of reality. |
  | [`get_num_modes`](#qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.get_num_modes "qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.get_num_modes")()                                         | Returns the number of vibrational modes for the molecule.                                                                |
  | [`update_molecule`](#qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.update_molecule "qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.update_molecule")(molecule)                           | Wipe state if molecule changes, and check validity of molecule for potential.                                            |
  | [`vibrational_energy_level`](#qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.vibrational_energy_level "qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.vibrational_energy_level")(n)       | Returns the n-th vibrational energy level for a given mode.                                                              |

  ### get\_maximum\_trusted\_level

  <Function id="qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.get_maximum_trusted_level" name="get_maximum_trusted_level" signature="get_maximum_trusted_level(n=0)">
    Returns the maximum energy level for which the particular implementation still provides a good approximation of reality. Default value of 100. Redefined where needed (see e.g. Morse).

    **Parameters**

    **n** (`int`) – vibronic mode

    **Return type**

    `float`

    **Returns**

    maximum\_trusted\_level setted
  </Function>

  ### get\_num\_modes

  <Function id="qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.get_num_modes" name="get_num_modes" signature="abstract get_num_modes()">
    Returns the number of vibrational modes for the molecule.

    **Return type**

    `float`

    **Returns**

    the number of vibrational modes
  </Function>

  ### update\_molecule

  <Function id="qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.update_molecule" name="update_molecule" signature="update_molecule(molecule)">
    Wipe state if molecule changes, and check validity of molecule for potential.

    **Parameters**

    **molecule** (`Molecule`) – chemistry molecule

    **Return type**

    `Molecule`

    **Returns**

    molecule used
  </Function>

  ### vibrational\_energy\_level

  <Function id="qiskit.chemistry.algorithms.pes_samplers.VibronicStructureBase.vibrational_energy_level" name="vibrational_energy_level" signature="abstract vibrational_energy_level(n)">
    Returns the n-th vibrational energy level for a given mode.

    **Parameters**

    **n** (`int`) – number of vibrational mode

    **Return type**

    `float`

    **Returns**

    n-th vibrational energy level for a given mode
  </Function>
</Class>

